--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -8,10 +8,10 @@ body {
 	margin: 100px;
 	text-align:center;
 	width: 100px;
-  background-image: url('Guess that Number!!.png');
+  background-image: url('Guess that Number!! (1).png');
   color: rgb(34, 0, 255);
   padding: 4em;
-  background-repeat:repeat;
+  background-repeat:no-repeat;
   background-size:auto;
 	background-color: rgb(33, 21, 113);
 	background-position: top;
